--- a/shared/ui/src/main/res/values/strings.xml
+++ b/shared/ui/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
 <resources>
     <string name="action_next">Next</string>
     <string name="action_required">Required</string>
+    <string name="action_save">Save</string>
 </resources>
