--- a/features/onboarding/biometrics/src/main/res/values/strings.xml
+++ b/features/onboarding/biometrics/src/main/res/values/strings.xml
@@ -18,6 +18,6 @@
 
 <resources>
     <string name="onboarding_biometrics_title">Protect your data</string>
-    <string name="onboarding_biometrics_subtitle">Add an extra layer of security with Biometrics.</string>
-    <string name="onboarding_biometrics_action_enable_biometrics">Enable Biometrics</string>
+    <string name="onboarding_biometrics_subtitle">Add an extra layer of security with biometric unlock.</string>
+    <string name="onboarding_biometrics_action_enable_biometrics">Enable biometric unlock</string>
 </resources>
