--- a/features/imports/completion/src/main/res/values/strings.xml
+++ b/features/imports/completion/src/main/res/values/strings.xml
@@ -17,24 +17,6 @@
   -->
 
 <resources>
-    <string name="action_Delete">Delete</string>
-    <string name="action_edit">Edit</string>
-    <string name="action_import">Import</string>
-    <string name="action_next">Next</string>
-    <string name="action_ok">OK</string>
-    <string name="action_required">Required</string>
-    <string name="action_save">Save</string>
-    <string name="action_search">Search</string>
-    <string name="action_skip">Skip</string>
-
-    <plurals name="unit_items">
-        <item quantity="one">%1$d item</item>
-        <item quantity="other">%1$d items</item>
-    </plurals>
-
-    <plurals name="unit_seconds">
-        <item quantity="one">%1$d second</item>
-        <item quantity="other">%1$d seconds</item>
-    </plurals>
-
+    <string name="imports_completion_dialog_title">Codes imported</string>
+    <string name="imports_completion_dialog_message" comment="Placeholder will be replaced with the number of imported items. (e.g. Successfully imported 2 items.)">Successfully imported %1$s.</string>
 </resources>
