--- a/shared/ui/src/main/res/values/strings.xml
+++ b/shared/ui/src/main/res/values/strings.xml
@@ -20,6 +20,8 @@
     <string name="action_close">Close</string>
     <string name="action_delete">Delete</string>
     <string name="action_edit">Edit</string>
+    <string name="action_free">Free</string>
+    <string name="action_get">Get</string>
     <string name="action_import">Import</string>
     <string name="action_next">Next</string>
     <string name="action_ok">OK</string>
