feat: support entry restore after deletion

--- a/features/home/master/src/main/res/values/strings.xml
+++ b/features/home/master/src/main/res/values/strings.xml
@@ -22,4 +22,6 @@
     <string name="home_empty_title">No codes yet</string>
     <string name="home_empty_description">Protect your accounts with an extra layer of security.</string>
     <string name="home_empty_action">Create New Code</string>
+
+    <string name="home_snackbar_message_entry_deleted">Entry deleted</string>
 </resources>
