--- a/features/home/scan/src/main/res/values/strings.xml
+++ b/features/home/scan/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
 <resources>
     <string name="home_scan_qr_code_hint">Point your camera at the QR code.</string>
     <string name="home_scan_enter_manually">Enter manually</string>
+    <string name="home_scan_snackbar_message_invalid_entry_code">Invalid entry code</string>
+    <string name="home_scan_snackbar_message_invalid_qr_code">Invalid QR code</string>
 </resources>
