--- a/shared/ui/src/main/res/values/strings.xml
+++ b/shared/ui/src/main/res/values/strings.xml
@@ -32,6 +32,10 @@
     <string name="action_undo">Undo</string>
     <string name="action_unlock">Unlock</string>
 
+    <string name="date_format_today">Today, %1$s</string>
+    <string name="date_format_yesterday">Yesterday, %1$s</string>
+    <string name="date_format_full_compact_month" comment="This format outputs the date in the format: 09 Jun 10:30. Do not add any extra characters, just change the order if needed of grouped characters to match local date format order">dd LLL HH:mm</string>
+
     <plurals name="unit_items">
         <item quantity="one">%1$d item</item>
         <item quantity="other">%1$d items</item>
