--- a/shared/ui/src/main/res/values/strings.xml
+++ b/shared/ui/src/main/res/values/strings.xml
@@ -33,6 +33,14 @@
     <string name="action_undo">Undo</string>
     <string name="action_unlock">Unlock</string>
 
+    <string name="authenticator_google" translatable="false">Google Authenticator</string>
+    <string name="authenticator_2fas" translatable="false">2FAS</string>
+    <string name="authenticator_aegis" translatable="false">Aegis Authenticator</string>
+    <string name="authenticator_bitwarden" translatable="false">Bitwarden Authenticator</string>
+    <string name="authenticator_ente" translatable="false">Ente Auth</string>
+    <string name="authenticator_last_pass" translatable="false">LastPass Authenticator</string>
+    <string name="authenticator_proton" translatable="false">Proton Authenticator</string>
+
     <string name="date_format_today">Today, %1$s</string>
     <string name="date_format_yesterday">Yesterday, %1$s</string>
     <string name="date_format_full_compact_month" comment="This format outputs the date in the format: 09 Jun 10:30. Do not add any extra characters, just change the order if needed of grouped characters to match local date format order">dd LLL HH:mm</string>
