--- a/features/imports/onboarding/src/main/res/values/strings.xml
+++ b/features/imports/onboarding/src/main/res/values/strings.xml
@@ -20,28 +20,28 @@
     <string name="imports_onboarding_title">Import codes from %1$s</string>
 
     <string-array name="imports_onboarding_google_steps">
-        <item>To export codes from Google Authenticator, you\'ll need to use the app\'s built-in “Transfer accounts” feature, which generates a QR code for transferring accounts to a new device.</item>
+        <item>To export codes from Google Authenticator, you\'ll need to use the app\'s built-in \"Transfer accounts\" feature, which generates a QR code for transferring accounts to a new device.</item>
     </string-array>
 
     <string-array name="imports_onboarding_2fas_steps">
-        <item>Open 2FAS Authenticator and enter the “Settings” section.</item>
-        <item>Then enter the “2FAS Backup” feature.</item>
-        <item>Enter the Export tool and click the “Export to file” button.</item>
+        <item>Open 2FAS Authenticator and enter the \"Settings\" section.</item>
+        <item>Then enter the \"2FAS Backup\" feature.</item>
+        <item>Enter the Export tool and click the \"Export to file\" button.</item>
     </string-array>
 
     <string-array name="imports_onboarding_aegis_steps">
-        <item>To export codes from Aegis Authenticator, navigate to the app\'s Settings, find the ”Import &amp; Export” section, and select the export option.</item>
+        <item>To export codes from Aegis Authenticator, navigate to the app\'s Settings, find the \"Import &amp; Export\" section, and select the export option.</item>
         <item>You can choose to export as an encrypted database, or as a plain text file.</item>
     </string-array>
 
     <string-array name="imports_onboarding_bitwarden_steps">
-        <item>To export data from Bitwarden Authenticator, open the “Settings” tab and tap the “Export” button.</item>
+        <item>To export data from Bitwarden Authenticator, open the \"Settings\" tab and tap the \"Export\" button.</item>
         <item>You can choose to export your data as a .json or .csv file.</item>
     </string-array>
 
     <string-array name="imports_onboarding_ente_steps">
-        <item>To export data from Ente Auth, open the “Settings” tab and look for “Import/Export” options.</item>
-        <item>Tap “Export Codes” and then “Ente Encrypted export”.</item>
+        <item>To export data from Ente Auth, open the \"Settings\" tab and look for \"Import/Export\" options.</item>
+        <item>Tap \"Export Codes\" and then \"Ente Encrypted export\".</item>
         <item>This creates an encrypted backup file (usually .ente or .json) containing all your codes.</item>
     </string-array>
 
@@ -51,7 +51,7 @@
     </string-array>
 
     <string-array name="imports_onboarding_proton_authenticator_steps">
-        <item>To export codes from Proton Authenticator, navigate to the app\'s settings, find the “Mange your data” section, and select the export option.</item>
+        <item>To export codes from Proton Authenticator, navigate to the app\'s settings, find the \"Manage your data\" section, and select the export option.</item>
     </string-array>
 
     <string name="imports_onboarding_help_link">Need more help?</string>
