--- a/features/home/master/src/main/res/values/strings.xml
+++ b/features/home/master/src/main/res/values/strings.xml
@@ -30,6 +30,6 @@
     <string name="home_snackbar_message_entry_delete_failed">There was an error deleting the entry</string>
     <string name="home_snackbar_message_entry_rearrange_failed">There was an error rearranging the entry</string>
     <string name="home_snackbar_message_entry_restore_failed">There was an error restoring the entry</string>
-    <string name="home_snackbar_message_entry_sync_disabled">Sync is disabled</string>
+    <string name="home_snackbar_message_entry_sync_disabled">Device sync is disabled</string>
     <string name="home_snackbar_message_entry_sync_failed">There was an error syncing the entries</string>
 </resources>
