--- a/features/imports/onboarding/src/main/res/values/strings.xml
+++ b/features/imports/onboarding/src/main/res/values/strings.xml
@@ -20,39 +20,39 @@
     <string name="imports_onboarding_title_supported">Import codes from %1$s</string>
     <string name="imports_onboarding_title_unsupported">No export available</string>
 
-    <string-array name="imports_onboarding_google_steps">
-        <item>To export codes from Google Authenticator, you\'ll need to use the app\'s built-in \"Transfer accounts\" feature, which generates a QR code for transferring accounts to a new device.</item>
+    <string-array name="imports_onboarding_google_steps_v2">
+        <item>Please go to \"Settings > Transfer accounts > Export accounts\"</item>
+        <item>This will create one or more QR codes that you can use here.</item>
     </string-array>
 
-    <string-array name="imports_onboarding_2fas_steps">
-        <item>Open 2FAS Authenticator and enter the \"Settings\" section.</item>
-        <item>Then enter the \"2FAS Backup\" feature.</item>
-        <item>Enter the Export tool and click the \"Export to file\" button.</item>
+    <string-array name="imports_onboarding_2fas_steps_v2">
+        <item>Please go to \"Settings > 2FAS Backup > Export\"</item>
+        <item>This will create a 2fas file that you can use here.</item>
     </string-array>
 
-    <string-array name="imports_onboarding_aegis_steps">
-        <item>To export codes from Aegis Authenticator, navigate to the app\'s Settings, find the \"Import &amp; Export\" section, and select the export option.</item>
-        <item>You can choose to export as an encrypted database, or as a plain text file.</item>
+    <string-array name="imports_onboarding_aegis_steps_v2">
+        <item>Please go to \"Settings > Import &amp; Export > Export\"</item>
+        <item>This will create a Json file that you can use here.</item>
     </string-array>
 
-    <string-array name="imports_onboarding_bitwarden_steps">
-        <item>To export data from Bitwarden Authenticator, open the \"Settings\" tab and tap the \"Export\" button.</item>
-        <item>You can choose to export your data as a .json or .csv file.</item>
+    <string-array name="imports_onboarding_bitwarden_steps_v2">
+        <item>Please go to \"Settings > Export\"</item>
+        <item>This will create a Json file that you can use here.</item>
     </string-array>
 
-    <string-array name="imports_onboarding_ente_steps">
-        <item>To export data from Ente Auth, open the \"Settings\" tab and look for \"Import/Export\" options.</item>
-        <item>Tap \"Export Codes\" and then \"Ente Encrypted export\".</item>
-        <item>This creates an encrypted backup file (usually .ente or .json) containing all your codes.</item>
+    <string-array name="imports_onboarding_ente_steps_v2">
+        <item>Please go to \"Settings > Data > Export codes\"</item>
+        <item>Choose \"Plain text\", this will create a txt file that you can use here.</item>
     </string-array>
 
-    <string-array name="imports_onboarding_lastpass_steps">
-        <item>To export 2FA codes (TOTP) from LastPass, you\'ll need to export your vault data as a CSV file.</item>
-        <item>Open the LastPass browser extension and log in. Go to Account → Fix a problem yourself → Export vault items → Export data for use anywhere.</item>
+    <string-array name="imports_onboarding_lastpass_steps_v2">
+        <item>Please go to \"Settings > Transfer accounts > Export accounts to file\"</item>
+        <item>This will create a Json file that you can use here.</item>
     </string-array>
 
-    <string-array name="imports_onboarding_proton_authenticator_steps">
-        <item>To export codes from Proton Authenticator, navigate to the app\'s settings, find the \"Manage your data\" section, and select the export option.</item>
+    <string-array name="imports_onboarding_proton_authenticator_steps_v2">
+        <item>Please go \"Settings > Export\"</item>
+        <item>This will create a Json file that you can use here.</item>
     </string-array>
 
     <string-array name="imports_onboarding_unsupported_steps">
