--- a/features/imports/errors/src/main/res/values/strings.xml
+++ b/features/imports/errors/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="imports_error_dialog_title">Import failed</string>
     <string name="imports_error_dialog_message_bad_content">The selected file could not be imported.</string>
     <string name="imports_error_dialog_message_bad_encryption">The selected file could not be decrypted.</string>
+    <string name="imports_error_dialog_message_file_too_large">File size limit exceeded</string>
 </resources>
