style: display 'No issuer' and set icon character to a dash if there's no issuer defined

--- a/features/home/master/src/main/res/values/strings.xml
+++ b/features/home/master/src/main/res/values/strings.xml
@@ -25,6 +25,8 @@
     <string name="home_empty_search_title">No results found</string>
     <string name="home_empty_search_subtitle">Try searching using different spelling or keywords.</string>
 
+    <string name="home_entries_no_issuer">No issuer</string>
+
     <string name="home_snackbar_message_entry_copied">Entry copied</string>
     <string name="home_snackbar_message_entry_deleted">Entry deleted</string>
     <string name="home_snackbar_message_entry_delete_failed">There was an error deleting the entry</string>
