feat: show notification for successful backups

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,7 @@
 
     <string name="notification_automatic_backups_title">Automatic backups stopped</string>
     <string name="notification_automatic_backups_message">The specified backup folder could not be found. Please check your settings to restart automatic backups.</string>
+
+    <string name="notification_automatic_backups_success_title">Backup completed successfully</string>
+    <string name="notification_automatic_backups_success_message">Backup saved successfully to %s</string>
 </resources>
