fix: avoid creating multiple unlock screen instances

--- a/features/unlock/master/src/main/res/values/strings.xml
+++ b/features/unlock/master/src/main/res/values/strings.xml
@@ -19,4 +19,7 @@
 <resources>
     <string name="unlock_screen_title" comment="The placeholder will be replaced by app name. (e.g. Unlock Proton Authenticator)">Unlock %1$s</string>
     <string name="unlock_screen_description">Verify your identity with your registered biometrics to continue.</string>
+
+    <string name="unlock_screen_promtp_title">App locked</string>
+    <string name="unlock_screen_promtp_subtitle">Unlock using your device lock</string>
 </resources>
